# rest-api-cpp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
database/: database.cpp  sqlite.cpp
handlers/: user.cpp
include/: database.h  http_server.h  permission.h  role.h  sqlite_wrapper.h  user.h
src/: database.cpp  http_server.cpp  main.cpp  permission.cpp  role.cpp  sqlite_wrapper.cpp  user.cpp
